After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 664266 - folder renaming selects only the part before the last dot in list view
folder renaming selects only the part before the last dot in list view
Status: RESOLVED FIXED
Product: nautilus
Classification: Core
Component: File and Folder Operations
3.2.x
Other Linux
: Normal normal
: ---
Assigned To: Nautilus Maintainers
Nautilus Maintainers
Depends on:
Blocks:
 
 
Reported: 2011-11-17 12:34 UTC by Pedro Villavicencio
Modified: 2012-08-27 13:35 UTC
See Also:
GNOME target: ---
GNOME version: 3.1/3.2


Attachments
Rename entire folder name (1.38 KB, patch)
2012-08-26 14:37 UTC, William Jon McCann
committed Details | Review

Description Pedro Villavicencio 2011-11-17 12:34:01 UTC
this report has been filed here:

https://bugs.launchpad.net/ubuntu/+source/nautilus/+bug/883947

"When renaming a folder the renaming feature behaves exactly like the renaming feature for files. It selects all letters before the last dot and only when you press the F2 button once again, the complete foldername will be selected.

I think this behavior isn't correct for folder-renaming because there are no "folder-extensions" like the "file-extensions" that have to be minded. Therefore it would be better, to select the whole foldername."

"To reproduce

* open nautilus
* switch to list view
* create folder
* name it "test.folder"
* select it and press F2 or select "rename" from the right click menu
* only "test" will be selected
* switch to another view (compact, icon)
* select the folder and press F2 or select "rename" from the right click menu
* "test.folder" will be selected"
Comment 1 William Jon McCann 2012-08-26 14:37:25 UTC
Created attachment 222467 [details] [review]
Rename entire folder name

Not just the part before the "."
Comment 2 Cosimo Cecchi 2012-08-27 12:50:56 UTC
Review of attachment 222467 [details] [review]:

Looks good.