Rename entire folder name

Not just the part before the "."

https://bugzilla.gnome.org/show_bug.cgi?id=664266